--- a/sdk/@launchdarkly/observability/package.json
+++ b/sdk/@launchdarkly/observability/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@launchdarkly/observability",
-	"version": "0.1.0",
+	"version": "0.1.5",
 	"description": "Browser observability for your web app. Capture frontend metrics, errors, logs and traces.",
 	"keywords": [
 		"launchdarkly",
@@ -29,8 +29,10 @@
 		"typegen": "tsc",
 		"build": "vite build"
 	},
+	"dependencies": {
+		"highlight.run": "workspace:*"
+	},
 	"devDependencies": {
-		"highlight.run": "workspace:*",
 		"rollup-plugin-visualizer": "^5.14.0",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.4",
