fix package name

--- a/.github/workflows/manual-publish-docs.yml
+++ b/.github/workflows/manual-publish-docs.yml
@@ -7,7 +7,7 @@ permissions:
     contents: write
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
-    publish-package:
+    publish-docs:
         runs-on: ubuntu-latest
         steps:
             - uses: launchdarkly/common-actions/ssh-key-by-repo@main
