--- a/.github/workflows/manual-publish-docs.yml
+++ b/.github/workflows/manual-publish-docs.yml
@@ -29,6 +29,8 @@ jobs:
 
             - name: Install js dependencies
               run: yarn
+              env:
+                  PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
 
             - name: Build docs
               run: yarn docs --filter highlight.run
