--- a/.github/workflows/manual-publish-docs.yml
+++ b/.github/workflows/manual-publish-docs.yml
@@ -8,7 +8,7 @@ permissions:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     publish-docs:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         steps:
             - uses: launchdarkly/common-actions/ssh-key-by-repo@main
               with:
