--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -36,7 +36,7 @@ jobs:
                   cache: 'yarn'
 
             - name: Install js dependencies
-              run: yarn
+              run: yarn install
 
             - name: Check yarn for duplicate deps
               run: yarn dedupe --check
