--- a/.github/workflows/manual-publish.yml
+++ b/.github/workflows/manual-publish.yml
@@ -54,7 +54,7 @@ jobs:
                   REACT_APP_COMMIT_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
 
             - name: Configure yarn npm registry credentials for highlight
-              if: ${{ inputs.release_highlight == 'true' }}
+              if: ${{ inputs.release_highlight == true }}
               run: |
                   yarn config set npmRegistryServer "https://registry.npmjs.org"
                   yarn config set npmAuthToken "${NPM_TOKEN}"
@@ -62,7 +62,7 @@ jobs:
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
 
             - name: Publish highlight npm packages
-              if: ${{ inputs.release_highlight == 'true' }}
+              if: ${{ inputs.release_highlight == true }}
               id: changesets-publish
               uses: changesets/action@v1
               with:
@@ -73,20 +73,20 @@ jobs:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
 
             - uses: launchdarkly/gh-actions/actions/release-secrets@release-secrets-v1.2.0
-              if: ${{ inputs.release_launchdarkly == 'true' }}
+              if: ${{ inputs.release_launchdarkly == true }}
               name: 'Get NPM token'
               with:
                   aws_assume_role: ${{ vars.AWS_ROLE_ARN }}
                   ssm_parameter_pairs: '/production/common/releasing/npm/token = NODE_AUTH_TOKEN'
 
             - name: Configure yarn npm registry credentials for launchdarkly
-              if: ${{ inputs.release_launchdarkly == 'true' }}
+              if: ${{ inputs.release_launchdarkly == true }}
               run: |
                   yarn config set npmRegistryServer "https://registry.npmjs.org"
                   yarn config set npmAuthToken "${NODE_AUTH_TOKEN}"
 
             - name: Publish
-              if: ${{ inputs.release_launchdarkly == 'true' }}
+              if: ${{ inputs.release_launchdarkly == true }}
               shell: bash
               run: |
                   ./scripts/publish-npm.sh
