bundle types and add ld sdk as dependency

--- a/turbo.json
+++ b/turbo.json
@@ -34,7 +34,7 @@
 			]
 		},
 		"docs": {
-			"dependsOn": ["^build"],
+			"dependsOn": ["^build", "typegen"],
 			"inputs": [
 				"src/**/*.tsx",
 				"src/**/*.ts",
