--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -17,6 +17,8 @@ jobs:
             TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
             TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
         steps:
+            - name: Checkout
+              uses: actions/checkout@v4
             - run: git submodule update --init --recursive
 
             # automatically caches dependencies based on yarn.lock
