--- a/.github/workflows/manual-publish-docs.yml
+++ b/.github/workflows/manual-publish-docs.yml
@@ -10,6 +10,8 @@ jobs:
     publish-docs:
         runs-on: ubuntu-22.04-8core-32gb
         steps:
+            - name: Checkout
+              uses: actions/checkout@v4
             - run: git submodule update --init --recursive
 
             - name: Setup Node.js environment
