--- a/sdk/highlight-node/package.json
+++ b/sdk/highlight-node/package.json
@@ -2,6 +2,10 @@
 	"name": "@highlight-run/node",
 	"version": "3.12.1",
 	"license": "Apache-2.0",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/launchdarkly/observability-sdk.git"
+	},
 	"scripts": {
 		"typegen": "tsc -d --emitDeclarationOnly",
 		"dev": "yarn build --watch",
