--- a/sdk/highlight-hono/package.json
+++ b/sdk/highlight-hono/package.json
@@ -2,6 +2,10 @@
 	"name": "@highlight-run/hono",
 	"version": "1.0.4",
 	"description": "Highlight.io SDK for Hono applications",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/launchdarkly/observability-sdk.git"
+	},
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"files": [
