--- a/sdk/highlight-nest/package.json
+++ b/sdk/highlight-nest/package.json
@@ -2,6 +2,10 @@
 	"name": "@highlight-run/nest",
 	"version": "3.6.13",
 	"description": "Client for interfacing with Highlight in nestjs",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/launchdarkly/observability-sdk.git"
+	},
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
