--- a/sdk/highlight-remix/package.json
+++ b/sdk/highlight-remix/package.json
@@ -2,6 +2,10 @@
 	"name": "@highlight-run/remix",
 	"version": "2.0.99",
 	"description": "Client for interfacing with Highlight in Remix",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/launchdarkly/observability-sdk.git"
+	},
 	"packageManager": "yarn@4.0.2",
 	"author": "",
 	"license": "Apache-2.0",
