--- a/sdk/highlight-run/package.json
+++ b/sdk/highlight-run/package.json
@@ -19,10 +19,8 @@
 	},
 	"license": "Apache-2.0",
 	"repository": {
-		"repository": {
-			"type": "git",
-			"url": "https://github.com/highlight/highlight.git"
-		}
+		"type": "git",
+		"url": "https://github.com/launchdarkly/observability-sdk.git"
 	},
 	"scripts": {
 		"build": "yarn build:umd && vite build",
