--- a/sdk/highlight-sourcemap-uploader/package.json
+++ b/sdk/highlight-sourcemap-uploader/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@highlight-run/sourcemap-uploader",
   "version": "0.6.3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/launchdarkly/observability-sdk.git"
+  },
   "description": "Command line tool to upload source maps to Highlight",
   "bin": "./dist/index.js",
   "author": "Highlight",
