fix launchdarkly client integration (#34)
## Summary

* exclude launchdarkly events and evals from being recorded by the
observability sdk
* correctly export sub-exports via paths with types
* bundle types with correct dependency expression
* fix ld client integration reporting events to ld client from
observability plugins
* update docs to export the API interfaces

## How did you test this change?

validating no events / evals urls recorded as spans

<img width="1621" alt="Screenshot 2025-05-13 at 23 56 24"
src="https://github.com/user-attachments/assets/02709730-1501-4727-9bf1-bc4847c5774c"
/>

validating bundled sdk

<img width="893" alt="Screenshot 2025-05-13 at 23 58 14"
src="https://github.com/user-attachments/assets/cb4e5520-ae97-421f-a769-41f6542d27ea"
/>
<img width="1799" alt="Screenshot 2025-05-13 at 23 58 27"
src="https://github.com/user-attachments/assets/f460f7b6-5434-4071-9949-2ffacb29fcb0"
/>


## Are there any deployment considerations?

changesets

## Does this work require review from our design team?

no

--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -17,15 +17,8 @@ jobs:
             TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
             TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
         steps:
-            - uses: launchdarkly/common-actions/ssh-key-by-repo@main
-              with:
-                  repo_keys_map: |
-                      {
-                        "launchdarkly/rrweb": ${{ toJSON(secrets.LAUNCHDARKLY_RRWEB_DEPLOY_KEY) }}
-                      }
-            - uses: launchdarkly/common-actions/init@main
-              env:
-                  GITHUB_TOKEN: ${{ github.token }}
+            - name: Checkout
+              uses: actions/checkout@v4
             - run: git submodule update --init --recursive
 
             # automatically caches dependencies based on yarn.lock
