--- a/.github/workflows/manual-publish.yml
+++ b/.github/workflows/manual-publish.yml
@@ -27,15 +27,8 @@ jobs:
     publish-package:
         runs-on: ubuntu-22.04-8core-32gb
         steps:
-            - uses: launchdarkly/common-actions/ssh-key-by-repo@main
-              with:
-                  repo_keys_map: |
-                      {
-                          "launchdarkly/rrweb": ${{ toJSON(secrets.LAUNCHDARKLY_RRWEB_DEPLOY_KEY) }}
-                      }
-            - uses: launchdarkly/common-actions/init@main
-              env:
-                  GITHUB_TOKEN: ${{ github.token }}
+            - name: Checkout
+              uses: actions/checkout@v4
             - run: git submodule update --init --recursive
 
             - name: Setup Node.js environment
