--- a/sdk/highlight-react/package.json
+++ b/sdk/highlight-react/package.json
@@ -1,8 +1,12 @@
 {
 	"name": "@highlight-run/react",
-	"version": "19.0.4",
+	"version": "19.0.6",
 	"description": "The official Highlight SDK for React",
 	"license": "Apache-2.0",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/launchdarkly/observability-sdk.git"
+	},
 	"peerDependencies": {
 		"highlight.run": "workspace:*",
 		"react": ">=16",
@@ -31,9 +35,5 @@
 	"files": [
 		"dist",
 		"package.json"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/highlight/highlight"
-	}
+	]
 }
