--- a/sdk/highlight-run/package.json
+++ b/sdk/highlight-run/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "highlight.run",
-	"version": "9.18.4",
+	"version": "9.18.6",
 	"description": "Open source, fullstack monitoring. Capture frontend errors, record server side logs, and visualize what broke with session replay.",
 	"keywords": [
 		"highlight",
@@ -19,13 +19,11 @@
 	},
 	"license": "Apache-2.0",
 	"repository": {
-		"repository": {
-			"type": "git",
-			"url": "https://github.com/highlight/highlight.git"
-		}
+		"type": "git",
+		"url": "https://github.com/launchdarkly/observability-sdk.git"
 	},
 	"scripts": {
-		"build": "yarn typegen && yarn build:umd && vite build",
+		"build": "yarn build:umd && vite build",
 		"build:umd": "FORMAT=umd vite build",
 		"build:watch": "vite build --watch",
 		"codegen": "graphql-codegen --config codegen.yml",
@@ -35,44 +33,60 @@
 		"enforce-size": "size-limit",
 		"test": "vitest --run",
 		"test:watch": "vitest",
-		"typegen": "tsc",
+		"typegen": "FORMAT=d.ts vite build",
 		"docs": "typedoc"
 	},
 	"type": "module",
-	"types": "./dist/highlight-run/src/index.d.ts",
+	"types": "./dist/index.d.ts",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"unpkg": "./dist/index.umd.js",
 	"jsdelivr": "./dist/index.umd.js",
 	"exports": {
-		"types": "./dist/highlight-run/src/index.d.ts",
-		"unpkg": "./dist/index.umd.js",
-		"jsdelivr": "./dist/index.umd.js",
-		"import": "./dist/index.js",
-		"require": "./dist/index.js",
-		"default": "./dist/index.js"
+		".": {
+			"types": "./dist/index.d.ts",
+			"unpkg": "./dist/index.umd.js",
+			"jsdelivr": "./dist/index.umd.js",
+			"import": "./dist/index.js",
+			"require": "./dist/index.js",
+			"default": "./dist/index.js"
+		},
+		"./observe": {
+			"types": "./dist/observe.d.ts",
+			"import": "./dist/observe.js",
+			"require": "./dist/observe.js",
+			"default": "./dist/observe.js"
+		},
+		"./record": {
+			"types": "./dist/record.d.ts",
+			"import": "./dist/record.js",
+			"require": "./dist/record.js",
+			"default": "./dist/record.js"
+		},
+		"./ld/observe": {
+			"types": "./dist/LDObserve.d.ts",
+			"import": "./dist/LDObserve.js",
+			"require": "./dist/LDObserve.js",
+			"default": "./dist/LDObserve.js"
+		},
+		"./ld/record": {
+			"types": "./dist/LDRecord.d.ts",
+			"import": "./dist/LDRecord.js",
+			"require": "./dist/LDRecord.js",
+			"default": "./dist/LDRecord.js"
+		}
 	},
 	"files": [
 		"dist"
 	],
-	"peerDependencies": {
-		"@launchdarkly/js-client-sdk": ">=0.6.0",
-		"launchdarkly-js-client-sdk": ">=3.7.0"
-	},
-	"peerDependenciesMeta": {
-		"@launchdarkly/js-client-sdk": {
-			"optional": true
-		},
-		"launchdarkly-js-client-sdk": {
-			"optional": true
-		}
+	"dependencies": {
+		"@launchdarkly/js-client-sdk": "^0.6.0"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^5.0.0",
 		"@graphql-codegen/typescript": "^4.0.1",
 		"@graphql-codegen/typescript-graphql-request": "^6.0.1",
 		"@graphql-codegen/typescript-operations": "^4.0.1",
-		"@launchdarkly/js-client-sdk": "^0.6.0",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/exporter-metrics-otlp-http": ">=0.57.1",
 		"@opentelemetry/exporter-trace-otlp-http": ">=0.57.1",
@@ -89,7 +103,6 @@
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/plugin-json": "^6.1.0",
 		"@rollup/plugin-node-resolve": "^15.2.3",
-		"@rollup/plugin-typescript": "^11.1.6",
 		"@rrweb/rrweb-plugin-sequential-id-record": "workspace:*",
 		"@rrweb/types": "workspace:*",
 		"@size-limit/file": "^8.1.0",
@@ -116,6 +129,7 @@
 		"typedoc": "^0.28.4",
 		"typescript": "^5.0.4",
 		"vite": "^5.2.12",
+		"vite-plugin-dts": "^4.5.3",
 		"vitest": "^1.6.1",
 		"vitest-canvas-mock": "^0.3.3",
 		"web-vitals": "^3.5.0",
