fixup! Version Packages (#46)

--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -6,6 +6,9 @@ on:
     pull_request:
         types: [opened, synchronize]
 
+permissions:
+    id-token: write
+    contents: write
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     yarn-monorepo:
