--- a/.github/workflows/manual-publish.yml
+++ b/.github/workflows/manual-publish.yml
@@ -22,6 +22,10 @@ on:
 permissions:
     id-token: write
     contents: write
+    packages: write
+    pull-requests: write
+    issues: read
+
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     publish-package:
