--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -9,6 +9,10 @@ on:
 permissions:
     id-token: write
     contents: write
+    packages: write
+    pull-requests: write
+    issues: read
+
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     yarn-monorepo:
