--- a/sdk/@launchdarkly/observability-node/package.json
+++ b/sdk/@launchdarkly/observability-node/package.json
@@ -26,13 +26,17 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@launchdarkly/js-server-sdk-common": "^2.15.2",
 		"@launchdarkly/node-server-sdk-otel": "^1.2.2",
 		"@prisma/instrumentation": ">=5.0.0",
 		"highlight.run": "workspace:*",
 		"require-in-the-middle": "^7.4.0"
 	},
+	"peerDependencies": {
+		"@launchdarkly/js-server-sdk-common": "^2.15.2",
+		"@launchdarkly/node-server-sdk": "^9.9.2"
+	},
 	"devDependencies": {
+		"@launchdarkly/node-server-sdk": "^9.9.2",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/api-logs": "^0.57.2",
 		"@opentelemetry/auto-instrumentations-node": "^0.56.0",
