--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -51,7 +51,7 @@ jobs:
                   REACT_APP_COMMIT_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
 
             - name: Configure yarn npm registry credentials
-              if: github.ref == 'refs/heads/main'
+              # if: github.ref == 'refs/heads/main'
               run: |
                   yarn config set npmRegistryServer "https://registry.npmjs.org"
                   yarn config set npmAuthToken "${NPM_TOKEN}"
@@ -59,7 +59,7 @@ jobs:
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
 
             - name: Publish highlight npm packages
-              if: github.ref == 'refs/heads/main'
+              # if: github.ref == 'refs/heads/main'
               run: yarn publish:highlight
 
             - uses: launchdarkly/gh-actions/actions/release-secrets@release-secrets-v1.2.0
@@ -84,7 +84,7 @@ jobs:
                   LD_RELEASE_IS_DRYRUN: false
 
             - name: Release changesets
-              if: github.ref == 'refs/heads/main'
+              # if: github.ref == 'refs/heads/main'
               id: changesets-version
               uses: changesets/action@v1
               with:
