--- a/.github/workflows/python-plugin.yml
+++ b/.github/workflows/python-plugin.yml
@@ -36,14 +36,14 @@ jobs:
             - run: poetry install --all-extras
             - name: Lint
               run: poetry run black --check .
-            # - name: Test
-            #   run: poetry run pytest --cov=ldobserve --cov-branch --cov-report xml
-            # - name: Get Cover
-            #   if: github.event_name == 'pull_request'
-            #   uses: orgoro/coverage@v3
-            #   with:
-            #       coverageFile: ./sdk/@launchdarkly/observability-python/coverage.xml
-            #       token: ${{ secrets.GITHUB_TOKEN }}
+            - name: Test
+              run: poetry run pytest --cov=ldobserve --cov-branch --cov-report xml
+            - name: Get Cover
+              if: github.event_name == 'pull_request'
+              uses: orgoro/coverage@v3
+              with:
+                  coverageFile: ./sdk/@launchdarkly/observability-python/coverage.xml
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Build
               run: poetry build
             #- name: Validate PyProject
