--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -7,61 +7,40 @@
 		"url": "https://github.com/launchdarkly/observability-sdk.git"
 	},
 	"scripts": {
-		"typegen": "tsc -d --emitDeclarationOnly",
-		"dev": "yarn build --watch",
-		"build": "rollup --config rollup.config.mjs",
 		"test": "vitest run"
 	},
-	"main": "./dist/index.cjs",
-	"module": "./dist/index.js",
-	"types": "./dist/index.d.ts",
+	"main": "./src/index.ts",
+	"module": "./src/index.ts",
+	"types": "./src/index.ts",
 	"exports": {
-		"types": "./dist/index.d.ts",
-		"default": "./dist/index.cjs"
+		"types": "./src/index.ts",
+		"import": "./src/index.ts",
+		"default": "./src/index.ts"
 	},
 	"files": [
-		"dist"
+		"src"
 	],
 	"publishConfig": {
 		"access": "public"
 	},
 	"dependencies": {
+		"@launchdarkly/react-native-client-sdk": "^10.0.0",
 		"@opentelemetry/api": "^1.9.0",
-		"@opentelemetry/api-logs": "^0.57.2",
-		"@opentelemetry/core": "^1.30.1",
-		"@opentelemetry/exporter-logs-otlp-http": "^0.57.2",
-		"@opentelemetry/exporter-metrics-otlp-http": "^0.57.2",
-		"@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
+		"@opentelemetry/exporter-trace-otlp-http": "^0.56.0",
 		"@opentelemetry/instrumentation": "^0.57.2",
 		"@opentelemetry/instrumentation-fetch": "^0.57.2",
-		"@opentelemetry/otlp-exporter-base": "^0.57.2",
-		"@opentelemetry/otlp-transformer": "^0.57.2",
 		"@opentelemetry/resources": "^1.30.1",
-		"@opentelemetry/sdk-logs": "^0.57.2",
-		"@opentelemetry/sdk-metrics": "^1.30.1",
 		"@opentelemetry/sdk-trace-web": "^1.30.1",
 		"@opentelemetry/semantic-conventions": "^1.30.0",
-		"@opentelemetry/web-common": "^0.202.0",
 		"@react-native-async-storage/async-storage": "^2.1.2",
-		"react-native-device-info": "^11.1.0",
-		"react-native-exception-handler": "^2.10.10",
-		"react-native-get-random-values": "^1.11.0",
-		"uuid": "^9.0.1"
-	},
-	"peerDependencies": {
-		"@launchdarkly/react-native-client-sdk": "^10.0.0",
 		"expo-constants": ">=15.0.0",
 		"react-native": ">=0.70.0"
 	},
+	"optionalDependencies": {
+		"react-native-device-info": "^14.0.4"
+	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^28.0.2",
-		"@rollup/plugin-json": "^6.1.0",
-		"@rollup/plugin-node-resolve": "^16.0.0",
-		"@rollup/plugin-terser": "^0.4.4",
-		"@rollup/plugin-typescript": "^12.1.2",
-		"@types/uuid": "^9.0.7",
 		"react-native": "^0.79.0",
-		"rollup": "^4.34.8",
 		"typescript": "^5.0.4",
 		"vitest": "^2.1.3"
 	}
