--- a/.github/workflows/python-plugin.yml
+++ b/.github/workflows/python-plugin.yml
@@ -33,11 +33,11 @@ jobs:
               with:
                   python-version: '3.12'
                   cache: 'poetry'
-            - run: poetry install --all-extras
+            - run: make install
             - name: Lint
-              run: poetry run black --check .
+              run: make lint
             - name: Test
-              run: poetry run pytest --cov=ldobserve --cov-branch --cov-report xml
+              run: make test
             - name: Get Cover
               if: github.event_name == 'pull_request'
               uses: orgoro/coverage@v3
