--- a/e2e/react-native-otel/package.json
+++ b/e2e/react-native-otel/package.json
@@ -6,7 +6,9 @@
 		"start": "expo start",
 		"reset-project": "node ./scripts/reset-project.js",
 		"android": "expo start --android",
+		"android:run": "expo run:android",
 		"ios": "expo start --ios",
+		"ios:run": "expo run:ios",
 		"web": "expo start --web",
 		"lint": "expo lint",
 		"otel:start": "docker-compose -f docker-compose.yaml up"
