--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -7,37 +7,43 @@
 		"url": "https://github.com/launchdarkly/observability-sdk.git"
 	},
 	"scripts": {
+		"build": "vite build",
+		"typegen": "tsc",
 		"test": "vitest run"
 	},
-	"main": "./src/index.ts",
-	"module": "./src/index.ts",
-	"types": "./src/index.ts",
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"exports": {
-		"types": "./src/index.ts",
-		"import": "./src/index.ts",
-		"default": "./src/index.ts"
+		"types": "./dist/index.d.ts",
+		"import": "./dist/index.js",
+		"require": "./dist/index.cjs",
+		"default": "./dist/index.js"
 	},
 	"files": [
-		"src"
+		"dist"
 	],
 	"publishConfig": {
 		"access": "public"
 	},
 	"dependencies": {
-		"@launchdarkly/react-native-client-sdk": "^10.0.0",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.56.0",
 		"@opentelemetry/instrumentation": "^0.57.2",
 		"@opentelemetry/instrumentation-fetch": "^0.57.2",
 		"@opentelemetry/resources": "^1.30.1",
 		"@opentelemetry/sdk-trace-web": "^1.30.1",
-		"@opentelemetry/semantic-conventions": "^1.30.0",
-		"expo-constants": ">=15.0.0",
+		"@opentelemetry/semantic-conventions": "^1.30.0"
+	},
+	"peerDependencies": {
+		"@launchdarkly/react-native-client-sdk": "^10.0.0",
 		"react-native": ">=0.70.0"
 	},
 	"devDependencies": {
+		"@launchdarkly/react-native-client-sdk": "^10.0.0",
 		"react-native": "^0.79.0",
 		"typescript": "^5.0.4",
+		"vite": "^6.3.4",
 		"vitest": "^2.1.3"
 	}
 }
