--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -31,6 +31,7 @@
 		"@opentelemetry/exporter-trace-otlp-http": "^0.56.0",
 		"@opentelemetry/instrumentation": "^0.57.2",
 		"@opentelemetry/instrumentation-fetch": "^0.57.2",
+		"@opentelemetry/instrumentation-xml-http-request": "^0.57.2",
 		"@opentelemetry/resources": "^1.30.1",
 		"@opentelemetry/sdk-trace-web": "^1.30.1",
 		"@opentelemetry/semantic-conventions": "^1.30.0"
