--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -9,7 +9,8 @@
 	"scripts": {
 		"build": "vite build",
 		"typegen": "tsc",
-		"test": "vitest run"
+		"test": "vitest run",
+		"test:watch": "vitest watch"
 	},
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.js",
