--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -28,6 +28,7 @@
 		"access": "public"
 	},
 	"dependencies": {
+		"@launchdarkly/observability-shared": "workspace:*",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.56.0",
 		"@opentelemetry/instrumentation": "^0.57.2",
