--- a/sdk/@launchdarkly/observability-shared/package.json
+++ b/sdk/@launchdarkly/observability-shared/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/core": "^2.0.1",
-		"@opentelemetry/sdk-trace-web": "^2.0.1"
+		"@opentelemetry/sdk-trace-web": "^2.0.1",
+		"graphql": "^16.11.0"
 	}
 }
