--- a/.github/workflows/python-plugin.yml
+++ b/.github/workflows/python-plugin.yml
@@ -33,17 +33,17 @@ jobs:
               with:
                   python-version: '3.12'
                   cache: 'poetry'
-            - run: poetry install --all-extras
+            - run: make install
             - name: Lint
-              run: poetry run black --check .
-            # - name: Test
-            #   run: poetry run pytest --cov=ldobserve --cov-branch --cov-report xml
-            # - name: Get Cover
-            #   if: github.event_name == 'pull_request'
-            #   uses: orgoro/coverage@v3
-            #   with:
-            #       coverageFile: ./sdk/@launchdarkly/observability-python/coverage.xml
-            #       token: ${{ secrets.GITHUB_TOKEN }}
+              run: make lint
+            - name: Test
+              run: make test
+            - name: Get Cover
+              if: github.event_name == 'pull_request'
+              uses: orgoro/coverage@v3
+              with:
+                  coverageFile: ./sdk/@launchdarkly/observability-python/coverage.xml
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Build
               run: poetry build
             #- name: Validate PyProject
