--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -35,9 +35,9 @@ jobs:
                   cache: 'poetry'
             - run: poetry install --all-extras
             - name: Lint
-              run: make lint
+              run: poetry run black --check .
             - name: Test
-              run: make test
+              run: poetry run pytest --cov=highlight_io --cov-branch --cov-report xml
             - name: Get Cover
               if: github.event_name == 'pull_request'
               uses: orgoro/coverage@v3
