--- a/e2e/react-native-otel/package.json
+++ b/e2e/react-native-otel/package.json
@@ -5,9 +5,9 @@
 	"scripts": {
 		"start": "expo start",
 		"reset-project": "node ./scripts/reset-project.js",
-		"android": "expo start --android",
+		"android": "expo run:android",
 		"android:run": "expo run:android",
-		"ios": "expo start --ios",
+		"ios": "expo run:ios",
 		"ios:run": "expo run:ios",
 		"web": "expo start --web",
 		"lint": "expo lint",
@@ -15,7 +15,7 @@
 	},
 	"dependencies": {
 		"@expo/vector-icons": "^14.1.0",
-		"@launchdarkly/observability-react-native": "*",
+		"@launchdarkly/observability-react-native": "workspace:*",
 		"@launchdarkly/react-native-client-sdk": "^10.10.4",
 		"@react-native-async-storage/async-storage": "^2.1.2",
 		"@react-navigation/bottom-tabs": "^7.3.10",
