--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -35,6 +35,7 @@
 		"@opentelemetry/instrumentation": "^0.203.0",
 		"@opentelemetry/instrumentation-fetch": "^0.203.0",
 		"@opentelemetry/instrumentation-xml-http-request": "^0.203.0",
+		"@opentelemetry/otlp-exporter-base": "^0.203.0",
 		"@opentelemetry/resources": "^2.0.1",
 		"@opentelemetry/sdk-trace-web": "^2.0.1",
 		"@opentelemetry/semantic-conventions": "^1.35.0"
