--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"@opentelemetry/api": "^1.9.0",
+		"@opentelemetry/core": "^2.0.1",
 		"@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
 		"@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
@@ -37,6 +38,8 @@
 		"@opentelemetry/instrumentation-xml-http-request": "^0.203.0",
 		"@opentelemetry/otlp-exporter-base": "^0.203.0",
 		"@opentelemetry/resources": "^2.0.1",
+		"@opentelemetry/sdk-metrics": "^2.0.1",
+		"@opentelemetry/sdk-trace-base": "2.0.1",
 		"@opentelemetry/sdk-trace-web": "^2.0.1",
 		"@opentelemetry/semantic-conventions": "^1.35.0"
 	},
