--- a/sdk/@launchdarkly/observability-shared/tsconfig.json
+++ b/sdk/@launchdarkly/observability-shared/tsconfig.json
@@ -9,7 +9,9 @@
 		"esModuleInterop": true,
 		"target": "ES2020",
 		"skipLibCheck": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"outDir": "./dist",
+		"rootDir": "./src"
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
