--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -93,3 +93,20 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
+
+    publish-highlight-run-docs:
+        name: Publish Highlight.run Docs
+        if: github.ref == 'refs/heads/main'
+        uses: ./.github/workflows/manual-publish-docs.yml
+        with:
+            workspace_path: sdk/highlight-run
+
+    publish-observability-node-docs:
+        # Run the docs publish after the highlight.run docs are published.
+        needs: publish-highlight-run-docs
+        # Runs the job even if the highlight.run docs publish fails.
+        if: ${{ always() && !cancelled() && github.ref == 'refs/heads/main'}}
+        name: Publish @launchdarkly/observability-node Docs
+        uses: ./.github/workflows/manual-publish-docs.yml
+        with:
+            workspace_path: sdk/@launchdarkly/observability-node
