--- a/.github/workflows/python-plugin.yml
+++ b/.github/workflows/python-plugin.yml
@@ -27,12 +27,14 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
-            - name: Install poetry
-              run: pipx install poetry
-            - uses: actions/setup-python@v4
+
+            - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
               with:
-                  python-version: '3.12'
-                  cache: 'poetry'
+                  python-version: 3.10
+
+            - name: Install poetry
+              uses: abatilo/actions-poetry@7b6d33e44b4f08d7021a1dee3c044e9c253d6439
+
             - run: make install
             - name: Lint
               run: make lint
